--- a/packages/node-server/package.json
+++ b/packages/node-server/package.json
@@ -5,14 +5,18 @@
   "author": "Moorad <moorad2003@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.1"
+    "@types/morgan": "^1.9.3",
+    "express": "^4.18.1",
+    "morgan": "^1.10.0"
   },
   "scripts": {
-	"start": "tsc && node dist/index.js"
+    "start": "tsc && node dist/index.js"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/node": "^18.8.0",
+    "cors": "^2.8.5",
     "typescript": "^4.8.4"
   }
 }
