--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -46,7 +46,11 @@
   },
   "devDependencies": {
     "@types/node": "^18.8.0",
+    "@typescript-eslint/eslint-plugin": "^5.39.0",
+    "@typescript-eslint/parser": "^5.39.0",
     "autoprefixer": "^10.4.12",
+    "eslint": "^8.25.0",
+    "eslint-plugin-react": "^7.31.9",
     "postcss": "^8.4.17",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.8.4"
