--- a/packages/node-server/package.json
+++ b/packages/node-server/package.json
@@ -6,13 +6,17 @@
   "license": "MIT",
   "dependencies": {
     "@types/morgan": "^1.9.3",
+    "bcrypt": "^5.1.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "mongoose": "^6.6.5",
     "morgan": "^1.10.0"
   },
   "scripts": {
     "start": "tsc && node dist/index.js"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/node": "^18.8.0",
