--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -13,6 +13,7 @@
     "@types/jest": "^27.0.1",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "axios": "^1.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
