--- a/packages/node-server/.eslintrc.json
+++ b/packages/node-server/.eslintrc.json
@@ -20,7 +20,8 @@
     "rules": {
         "indent": [
             "error",
-            "tab"
+            "tab",
+			{"SwitchCase": 1}
         ],
         "linebreak-style": [
             "error",
@@ -28,7 +29,8 @@
         ],
         "quotes": [
             "error",
-            "single"
+            "single",
+			{"avoidEscape": true}
         ],
         "semi": [
             "error",
