--- a/packages/node-server/package.json
+++ b/packages/node-server/package.json
@@ -1,39 +1,41 @@
 {
-  "name": "node-server",
-  "version": "1.0.0",
-  "main": "index.js",
-  "author": "Moorad <moorad2003@gmail.com>",
-  "license": "MIT",
-  "dependencies": {
-    "@types/morgan": "^1.9.3",
-    "bcrypt": "^5.1.0",
-    "cookie-parser": "^1.4.6",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.1",
-    "jsonwebtoken": "^8.5.1",
-    "mime-types": "^2.1.35",
-    "mongoose": "^6.6.5",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
-    "uuid": "^9.0.0"
-  },
-  "scripts": {
-    "start": "tsc && node dist/index.js"
-  },
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/cookie-parser": "^1.4.3",
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.14",
-    "@types/jsonwebtoken": "^8.5.9",
-    "@types/mime-types": "^2.1.1",
-    "@types/multer": "^1.4.7",
-    "@types/node": "^18.8.0",
-    "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.39.0",
-    "@typescript-eslint/parser": "^5.39.0",
-    "cors": "^2.8.5",
-    "eslint": "^8.25.0",
-    "typescript": "^4.8.4"
-  }
+	"name": "node-server",
+	"version": "1.0.0",
+	"main": "index.js",
+	"author": "Moorad <moorad2003@gmail.com>",
+	"license": "MIT",
+	"dependencies": {
+		"@types/morgan": "^1.9.3",
+		"bcrypt": "^5.1.0",
+		"cookie-parser": "^1.4.6",
+		"dotenv": "^16.0.3",
+		"express": "^4.18.1",
+		"jsonwebtoken": "^8.5.1",
+		"mime-types": "^2.1.35",
+		"mongoose": "^6.6.5",
+		"morgan": "^1.10.0",
+		"multer": "^1.4.5-lts.1",
+		"uuid": "^9.0.0"
+	},
+	"scripts": {
+		"start": "tsc && node dist/index.js",
+		"tools": "npx tsc && node dist/tools/interface.js"
+	},
+	"devDependencies": {
+		"@faker-js/faker": "^7.6.0",
+		"@types/bcrypt": "^5.0.0",
+		"@types/cookie-parser": "^1.4.3",
+		"@types/cors": "^2.8.12",
+		"@types/express": "^4.17.14",
+		"@types/jsonwebtoken": "^8.5.9",
+		"@types/mime-types": "^2.1.1",
+		"@types/multer": "^1.4.7",
+		"@types/node": "^18.8.0",
+		"@types/uuid": "^8.3.4",
+		"@typescript-eslint/eslint-plugin": "^5.39.0",
+		"@typescript-eslint/parser": "^5.39.0",
+		"cors": "^2.8.5",
+		"eslint": "^8.25.0",
+		"typescript": "^4.8.4"
+	}
 }
