--- a/packages/react-app/.eslintrc.json
+++ b/packages/react-app/.eslintrc.json
@@ -20,10 +20,9 @@
         "@typescript-eslint"
     ],
     "rules": {
-        "indent": [
-            "error",
-            "tab"
-        ],
+		"indent": [
+			"off"
+		],
         "linebreak-style": [
             "error",
             "unix"
@@ -39,6 +38,10 @@
 		"jsx-quotes": [
 			"error",
 			"prefer-single"
+		],
+		"no-mixed-spaces-and-tabs": [
+			"error",
+			"smart-tabs"
 		]
     }
 }
