--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -20,7 +20,8 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-redux": "^8.0.4",
-		"web-vitals": "^2.1.0"
+		"web-vitals": "^2.1.0",
+		"common": "*"
 	},
 	"scripts": {
 		"dev": "next dev",
