Added simple tooling for cleaning uploaded files

--- a/packages/node-server/.gitignore
+++ b/packages/node-server/.gitignore
@@ -5,3 +5,5 @@ dist/
 # Ignore all files in media except default.png
 file_manager/media/*
 !default.png
+!d741bf93-672a-4b04-83ad-fbb90009f211.png
+!70bb12c5-5084-4f73-8302-451a2764e3e2.png
