--- a/packages/node-server/package.json
+++ b/packages/node-server/package.json
@@ -16,6 +16,8 @@
 		"mongoose-unique-validator": "^3.1.0",
 		"morgan": "^1.10.0",
 		"multer": "^1.4.5-lts.1",
+		"passport": "^0.6.0",
+		"passport-local": "^1.0.0",
 		"uuid": "^9.0.0"
 	},
 	"scripts": {
@@ -37,6 +39,8 @@
 		"@types/morgan": "^1.9.3",
 		"@types/multer": "^1.4.7",
 		"@types/node": "^18.8.0",
+		"@types/passport": "^1.0.11",
+		"@types/passport-local": "^1.0.34",
 		"@types/uuid": "^8.3.4",
 		"@typescript-eslint/eslint-plugin": "^5.39.0",
 		"@typescript-eslint/parser": "^5.39.0",
