--- a/packages/node-server/package.json
+++ b/packages/node-server/package.json
@@ -17,6 +17,7 @@
 		"morgan": "^1.10.0",
 		"multer": "^1.4.5-lts.1",
 		"passport": "^0.6.0",
+		"passport-facebook": "^3.0.0",
 		"passport-google-oauth20": "^2.0.0",
 		"passport-local": "^1.0.0",
 		"uuid": "^9.0.0"
@@ -41,6 +42,7 @@
 		"@types/multer": "^1.4.7",
 		"@types/node": "^18.8.0",
 		"@types/passport": "^1.0.11",
+		"@types/passport-facebook": "^2.1.11",
 		"@types/passport-google-oauth20": "^2.0.11",
 		"@types/passport-local": "^1.0.34",
 		"@types/uuid": "^8.3.4",
