--- a/packages/node-server/package.json
+++ b/packages/node-server/package.json
@@ -20,7 +20,8 @@
 		"passport-facebook": "^3.0.0",
 		"passport-google-oauth20": "^2.0.0",
 		"passport-local": "^1.0.0",
-		"uuid": "^9.0.0"
+		"uuid": "^9.0.0",
+		"zod": "^3.19.1"
 	},
 	"scripts": {
 		"start": "tsc && node dist/server.js",
