--- a/packages/node-server/.gitignore
+++ b/packages/node-server/.gitignore
@@ -7,5 +7,6 @@ coverage
 # Ignore all files in media except default.png
 file_manager/media/*
 !default.png
+!default_bg.png
 !d741bf93-672a-4b04-83ad-fbb90009f211.png
 !70bb12c5-5084-4f73-8302-451a2764e3e2.png
