--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -21,7 +21,7 @@
 		"react-dom": "^18.2.0",
 		"react-redux": "^8.0.4",
 		"web-vitals": "^2.1.0",
-		"common": "*"
+		"node-server": "*"
 	},
 	"scripts": {
 		"dev": "next dev",
