--- a/packages/node-server/package.json
+++ b/packages/node-server/package.json
@@ -19,11 +19,12 @@
 		"passport-facebook": "^3.0.0",
 		"passport-google-oauth20": "^2.0.0",
 		"passport-local": "^1.0.0",
+		"sharp": "^0.31.2",
 		"uuid": "^9.0.0",
 		"zod": "^3.19.1"
 	},
 	"scripts": {
-		"start": "tsc && node dist/server.js",
+		"start": "tsc && node dist/file_manager/utils/processing.js",
 		"tools": "npx tsc && node dist/tools/interface.js",
 		"test": "tsc && NODE_ENV=test mocha ./dist/tests --exit"
 	},
@@ -45,6 +46,7 @@
 		"@types/passport-facebook": "^2.1.11",
 		"@types/passport-google-oauth20": "^2.0.11",
 		"@types/passport-local": "^1.0.34",
+		"@types/sharp": "^0.31.0",
 		"@types/uuid": "^8.3.4",
 		"@typescript-eslint/eslint-plugin": "^5.39.0",
 		"@typescript-eslint/parser": "^5.39.0",
