--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -17,11 +17,12 @@
 		"@types/react-dom": "^18.0.0",
 		"axios": "^1.1.2",
 		"next": "12.3.2",
+		"node-server": "*",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-hot-toast": "^2.4.0",
 		"react-redux": "^8.0.4",
-		"web-vitals": "^2.1.0",
-		"node-server": "*"
+		"web-vitals": "^2.1.0"
 	},
 	"scripts": {
 		"dev": "next dev",
