--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -17,6 +17,7 @@
 		"@types/react": "^18.0.0",
 		"@types/react-dom": "^18.0.0",
 		"axios": "^1.1.2",
+		"highlight.js": "^11.7.0",
 		"marked": "^4.2.4",
 		"next": "12.3.2",
 		"node-server": "*",
