--- a/packages/node-server/package.json
+++ b/packages/node-server/package.json
@@ -5,6 +5,7 @@
 	"author": "Moorad <moorad2003@gmail.com>",
 	"license": "MIT",
 	"dependencies": {
+		"axios": "^1.3.0",
 		"bcrypt": "^5.1.0",
 		"cookie-parser": "^1.4.6",
 		"dotenv": "^16.0.3",
