--- a/packages/node-server/package.json
+++ b/packages/node-server/package.json
@@ -21,6 +21,7 @@
 		"passport-google-oauth20": "^2.0.0",
 		"passport-local": "^1.0.0",
 		"sharp": "^0.31.2",
+		"socket.io": "^4.5.4",
 		"uuid": "^9.0.0",
 		"zod": "^3.19.1"
 	},
