--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -27,6 +27,7 @@
 		"react-hot-toast": "^2.4.0",
 		"react-query": "^3.39.2",
 		"react-redux": "^8.0.4",
+		"socket.io-client": "^4.5.4",
 		"web-vitals": "^2.1.0"
 	},
 	"scripts": {
