--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "1.0.0",
 	"main": "index.js",
 	"repository": "https://github.com/Moorad/cs-project",
-	"author": "Moorad <moorad2003@gmail.com>",
+	"author": "Moorad <mooradaltamimi@gmail.com>",
 	"license": "MIT",
 	"private": true,
 	"scripts": {
