--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"license": "MIT",
 	"private": true,
 	"scripts": {
-		"start-prod": "concurrently \"yarn start-server\" \"yarn start-react\"",
+		"start-prod": "yarn --cwd ./packages/react-app next build && yarn concurrently \"yarn --cwd ./packages/react-app next start\" \"yarn start-server\"",
 		"start-react": "yarn --cwd ./packages/react-app dev",
 		"start-server": "yarn --cwd ./packages/node-server start",
 		"tools": "yarn --cwd ./packages/node-server tools",
